<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
            android:id="@+id/cardViewSongItem"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="@dimen/margin"
            android:layout_width="match_parent"
            app:cardCornerRadius="@dimen/corner_radius"
            android:layout_height="wrap_content" tools:ignore="MissingConstraints">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <ImageView android:layout_width="100dp" android:layout_height="100dp"
                       android:id="@+id/imageViewSongAlbum"
                       app:layout_constraintLeft_toLeftOf="parent"
                       app:layout_constraintTop_toTopOf="parent"
                       app:layout_constraintBottom_toBottomOf="parent"
                       android:layout_margin="@dimen/margin"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:id="@+id/textViewSongTitle"
                      android:layout_margin="@dimen/margin"
                      android:text="@string/song_title"
                      app:layout_constraintLeft_toRightOf="@id/imageViewSongAlbum"
                      app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                    android:id="@+id/textViewSongName"
                    app:layout_constraintLeft_toRightOf="@+id/textViewSongTitle"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textColor="@android:color/holo_blue_dark"
                    android:layout_margin="@dimen/margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/song_placeholder" tools:ignore="MissingConstraints"/>
            <TextView
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:id="@+id/textViewArtistTitle"
                    app:layout_constraintTop_toBottomOf="@id/textViewSongTitle"
                    app:layout_constraintLeft_toRightOf="@id/imageViewSongAlbum"
                    android:layout_margin="@dimen/margin"
                    android:text="@string/artist_title"/>
            <TextView
                    android:id="@+id/textViewSongArtist"
                    app:layout_constraintTop_toBottomOf="@+id/textViewSongName"
                    app:layout_constraintLeft_toRightOf="@id/textViewArtistTitle"
                    android:layout_marginTop="@dimen/margin"
                    android:layout_margin="@dimen/margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/artist_placeholder"/>
            <TextView
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:id="@+id/textViewAlbumTitle"
                    app:layout_constraintTop_toBottomOf="@id/textViewArtistTitle"
                    app:layout_constraintLeft_toRightOf="@id/imageViewSongAlbum"
                    android:layout_margin="@dimen/margin"
                    android:text="@string/album_title"/>
            <TextView
                    android:id="@+id/textViewAlbum"
                    app:layout_constraintTop_toBottomOf="@+id/textViewSongArtist"
                    app:layout_constraintLeft_toRightOf="@id/textViewArtistTitle"
                    android:layout_marginTop="@dimen/margin"
                    android:layout_margin="@dimen/margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/album_placeholder"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>